fix(sponsors): fix sizing of logo's on mobile

--- a/src/components/sponsors/style.scss
+++ b/src/components/sponsors/style.scss
@@ -22,6 +22,7 @@
     padding: 0;
 
     li {
+        width: 66%;
         list-style: none;
         justify-content: center;
     }
@@ -74,14 +75,8 @@
     }
 }
 
-@include breakpoint(lg) {
-    .sponsorlist li {
-        width: 20%;
-    }
-}
-
 @include breakpoint(xl) {
     .sponsorlist li {
-        width: 16.6%;
+        width: 20%;
     }
 }
